@@ -1,5 +1,14 @@
 2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Style.cs:
+	* Drawing/MapDrawer.cs:
+	* Xml/Serialization/MapSerializer.cs: add Label properties to Style
+
+	* Projection/ProjFourWrapper.cs: preserve feature properties in point
+	transform
+
+2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Drawing/MapDrawer.cs:
 	* Data/IFeatureSource.cs:
 	* Data/SimpleFeatureSource.cs:
